--- a/Source/Gnip.Client/Gnip.Client.csproj
+++ b/Source/Gnip.Client/Gnip.Client.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Extensions\ObservableExtensions.cs" />
     <Compile Include="Extensions\GnipStreamingExtensions.cs" />
+    <Compile Include="Extensions\Rest.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Extensions\XmlDocumentExtensions.cs" />
     <Compile Include="Model\GnipSystemMessage.cs" />
